--- a/_includes/static-navbar.html
+++ b/_includes/static-navbar.html
@@ -8,31 +8,30 @@
               <span class="icon-bar"></span>
               <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="{{ site.url }}">{{ site.title }}</a>
+            <a class="navbar-brand" href="{{ site.url }}"><img src="{{ site.url }}/assets/img/logo.png" alt="{{ site.title }}" width="258px" height="56px"></a>
           </div>
           <div id="navbar" class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
               <li class="active"><a href="{{ site.baseurl }}/about">About</a></li>
               <li><a href="{{ site.baseurl }}/exhibitions">Exhibitions</a></li>
-              <li><a href="{{ site.baseurl }}/events">Events</a></li>
-              <li><a href="{{ site.baseurl }}/contact">Contact</a></li>
               <li class="dropdown">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Exhibitions <span class="caret"></span></a>
               <ul class="dropdown-menu">
-                <li><a href="#">Action</a></li>
-                <li><a href="#">Another action</a></li>
-                <li><a href="#">Something else here</a></li>
+                <li><a href="{{ site.baseurl }}/exhibitions">List of Exhibitions</a></li>
                 <li role="separator" class="divider"></li>
-                <li class="dropdown-header">Nav header</li>
-                <li><a href="#">Separated link</a></li>
-                <li><a href="#">One more separated link</a></li>
+                <li class="dropdown-header">Recent Exhibitions</li>
+                <li><a href="#">Surrogates</a></li>
+                <li><a href="#">WOOSH</a></li>
               </ul>
             </li>
+              <li><a href="{{ site.baseurl }}/events">Events</a></li>
+              <li><a href="{{ site.baseurl }}/contact">Contact</a></li>
+              
             </ul>
             <ul class="nav navbar-nav navbar-right">
-              <li class="active"><a href="./">Default <span class="sr-only">(current)</span></a></li>
-              <li><a href="../navbar-static-top/">Static top</a></li>
-              <li><a href="../navbar-fixed-top/">Fixed top</a></li>
+              <li>{% include icon-facebook.html %}</li>
+              <li>{% include icon-instagram.html %}</li>
+              <li>{% include icon-twitter.html %}</li>
             </ul>
           </div><!--/.nav-collapse -->
         </div><!--/.container-fluid -->
