--- a/_includes/icon-facebook.html
+++ b/_includes/icon-facebook.html
@@ -1,1 +1,1 @@
-<a href="https://www.facebook.com/{{ site.facebook_username }}"><span class="icon">{% include icon-facebook.svg %}</span></a>
+<a href="https://www.facebook.com/{{ site.facebook_username }}"><span class="icon icon-30">{% include icon-facebook.svg %}</span></a>
