--- a/_includes/head.html
+++ b/_includes/head.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="{{ "/css/bootstrap.min.css" | prepend: site.baseurl }}">
 
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-    <link rel="stylesheet" href="../../assets/css/ie10-viewport-bug-workaround.css">
+    <link rel="stylesheet" href="{{ "/assets/css/ie10-viewport-bug-workaround.css" | prepend: site.baseurl }}">
 
     <!-- Custom styles for this template -->
     <link rel="stylesheet" href="{{ "/css/navbar.css" | prepend: site.baseurl }}">
