--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -40,7 +40,7 @@
 
 <footer class="footer">
   <div class="container">
-    <p class="text-muted">©2015 Griffin Art Projects<br />
+    <p class="text-muted"><strong>&copy;2016 Griffin Art Projects</strong><br />
 1174 Welch Street<br />
 North Vancouver BC<br />
 V7P 2R5</p>
