--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -1,14 +1,16 @@
 ---
 layout: default
 ---
-<article class="post">
-
+<article class="post-line">
+<div class="jumbotron">
   <header class="post-header">
-    <h1 class="post-title">{{ page.title }}</h1>
+    <h2 style="color: #808080;">{{ page.title }}</h2>
   </header>
 
   <div class="post-content">
-    {{ content }}
+  	
+    	{{ content }}
+    </div>
   </div>
 
 </article>
