--- a/_includes/static-navbar.html
+++ b/_includes/static-navbar.html
@@ -17,11 +17,11 @@
               <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Exhibitions <span class="caret"></span></a>
               <ul class="dropdown-menu">
-                <li><a href="{{ site.baseurl }}/exhibitions">List of Exhibitions</a></li>
-                <li role="separator" class="divider"></li>
                 <li class="dropdown-header">Recent Exhibitions</li>
-                <li><a href="#">Surrogates</a></li>
-                <li><a href="#">WOOSH</a></li>
+                <li><a href="{{ site.url }}exhibitions/2016/surrogates/">Surrogates</a></li>
+                <li><a href="{{ site.url }}exhibitions/2015/woosh/">WOOSH</a></li>
+                <li role="separator" class="divider"></li>
+                <li><a href="{{ site.baseurl }}/exhibitions">All Exhibitions</a></li>
               </ul>
             </li>
               <li><a href="{{ site.baseurl }}/events">Events</a></li>
