--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -40,10 +40,17 @@
 
 <footer class="footer">
   <div class="container">
+  <ul class="nav navbar-nav navbar-right">
+              <li>{% include icon-facebook.html %}</li>
+              <li>{% include icon-instagram.html %}</li>
+              <li>{% include icon-twitter.html %}</li>
+            </ul>
     <p class="text-muted"><strong>&copy;2016 Griffin Art Projects</strong><br />
 1174 Welch Street<br />
 North Vancouver BC<br />
 V7P 2R5</p>
+
   </div>
+
 </footer>
 
