--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -40,16 +40,44 @@
 
 <footer class="footer">
   <div class="container">
-  <ul class="nav navbar-nav navbar-right">
+  <div class="row">
+        <div class="col-md-5">
+        <p class="text-muted"><strong>&copy;2016 Griffin Art Projects</strong><br />
+        North Vancouver BC</p>
+        </div>
+        <div class="col-md-7">
+        <ul class="nav navbar-nav navbar-left">
               <li>{% include icon-facebook.html %}</li>
               <li>{% include icon-instagram.html %}</li>
               <li>{% include icon-twitter.html %}</li>
-            </ul>
-    <p class="text-muted"><strong>&copy;2016 Griffin Art Projects</strong><br />
-1174 Welch Street<br />
-North Vancouver BC<br />
-V7P 2R5</p>
+          </ul>
+        
+<!-- Begin MailChimp Signup Form -->
+<link href="{{ site.url }}assets/css/mailchimp-single-line.css" rel="stylesheet" type="text/css">
+<style type="text/css">
+  #mc_embed_signup{background:transparent; clear:left; font:14px Helvetica,Arial,sans-serif; width:100%;}
+  /* Add your own MailChimp form style overrides in your site stylesheet or in this style block.
+     We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. */
+</style>
+<div class="mc-field-group">
+<div id="mc_embed_signup">
+<form action="//griffinartprojects.us11.list-manage.com/subscribe/post?u=eb1ef5acf2935e738616a162a&amp;id=5f3ab1f744" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+    <div id="mc_embed_signup_scroll">
+  <div class="mc-field-text">Subscribe:</div>
+  <input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="email address" required>
+    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+    <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_eb1ef5acf2935e738616a162a_5f3ab1f744" tabindex="-1" value=""></div>
+    <div class="clear"><input type="submit" value="Submit" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
+    </div>
+</form>
+</div></div>
 
+<!--End mc_embed_signup-->
+        </div>
+        
+          
+        
+      </div>
   </div>
 
 </footer>
