--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,8 +14,8 @@
         
       </div>
     </div> <!-- /container -->
-
     {% include footer.html %}
+    {% if page.tt-grid == true %}{% include tt-grid.html %}{% endif %}
     {% include bootstrap-core-js.html %}
     {% include ie10-viewport-fix.html %}
   </body>
