--- a/_includes/head.html
+++ b/_includes/head.html
@@ -24,6 +24,14 @@
     <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
     <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ "/feed.xml" | prepend: site.baseurl | prepend: site.url }}">
 
+    {% if page.tt-grid == true %}
+    <!-- Thumbnail Grid Effects -->
+    
+    
+    <link rel="stylesheet" type="text/css" href="{{ "/assets/thumbs/css/component.css" | prepend: site.baseurl }}" />
+    <script src="{{ "/assets/thumbs/js/modernizr.custom.js" | prepend: site.baseurl }}"></script>
+    {% endif %}
+
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
