--- a/_includes/slider-Surrogates.html
+++ b/_includes/slider-Surrogates.html
@@ -4,21 +4,21 @@
         <div><a  href="#fb-cain" class="fb-gallery">
             <img data-lazy="{{ site.url }}assets/img/artworks/cain-sqr.jpg" alt="Sarah Cain"/></a></div>
         <div><a  href="#fb-install-01" class="fb-gallery">
-            <img data-lazy="{{ site.url }}assets/img/artworks/surrogates-01-sqr.jpg" alt="Installation Shot" height="180px"/></a></div>
+            <img data-lazy="{{ site.url }}assets/img/artworks/surrogates-01-sqr.jpg" alt="Installation Shot"/></a></div>
         <div><a  href="#fb-install-02" class="fb-gallery">
-            <img data-lazy="{{ site.url }}assets/img/artworks/surrogates-02-sqr.jpg" alt="Installation Shot" height="180px"/></a></div>
+            <img data-lazy="{{ site.url }}assets/img/artworks/surrogates-02-sqr.jpg" alt="Installation Shot"/></a></div>
         <div><a  href="#fb-install-03" class="fb-gallery">
-            <img data-lazy="{{ site.url }}assets/img/artworks/surrogates-03-sqr.jpg" alt="Installation Shot" height="180px"/></a></div>
+            <img data-lazy="{{ site.url }}assets/img/artworks/surrogates-03-sqr.jpg" alt="Installation Shot"/></a></div>
         <div><a  href="#fb-install-04" class="fb-gallery">
-            <img data-lazy="{{ site.url }}assets/img/artworks/surrogates-04-sqr.jpg" alt="Installation Shot" height="180px"/></a></div>
+            <img data-lazy="{{ site.url }}assets/img/artworks/surrogates-04-sqr.jpg" alt="Installation Shot"/></a></div>
         <div><a  href="#fb-install-05" class="fb-gallery">
-            <img data-lazy="{{ site.url }}assets/img/artworks/surrogates-05-sqr.jpg" alt="Installation Shot" height="180px"/></a></div>
+            <img data-lazy="{{ site.url }}assets/img/artworks/surrogates-05-sqr.jpg" alt="Installation Shot"/></a></div>
         <div><a  href="#fb-install-06" class="fb-gallery">
-            <img data-lazy="{{ site.url }}assets/img/artworks/surrogates-06-sqr.jpg" alt="Installation Shot" height="180px"/></a></div>
+            <img data-lazy="{{ site.url }}assets/img/artworks/surrogates-06-sqr.jpg" alt="Installation Shot"/></a></div>
         <div><a  href="#fb-install-07" class="fb-gallery">
-            <img data-lazy="{{ site.url }}assets/img/artworks/surrogates-07-sqr.jpg" alt="Installation Shot" height="180px"/></a></div> 
+            <img data-lazy="{{ site.url }}assets/img/artworks/surrogates-07-sqr.jpg" alt="Installation Shot"/></a></div> 
         <div><a  href="#fb-install-08" class="fb-gallery">
-            <img data-lazy="{{ site.url }}assets/img/artworks/surrogates-08-sqr.jpg" alt="Installation Shot" height="180px"/></a></div> 
+            <img data-lazy="{{ site.url }}assets/img/artworks/surrogates-08-sqr.jpg" alt="Installation Shot"/></a></div> 
        <!-- <div><img data-lazy="{{ site.url }}assets/img/artworks/MacLeod-sqr.jpg" alt="Myfanwy MacLeod"/></a></div>
         <div><a href="#"><img data-lazy="{{ site.url }}assets/img/artworks/beasley-sqr.jpg" alt="Kevin Beasley"/></a></div>
         <div><a href="#"><img data-lazy="{{ site.url }}assets/img/artworks/beshty-sqr.jpg" alt="Walead Beshty"/></a></div>
@@ -32,8 +32,8 @@
     </ul>
 
     <div style="display: none;">
-        <div id="fb-cain" style="max-width: 400px;">
-            <img src="{{ site.url }}assets/img/artworks/Cain-2010-520.jpg" alt="Sarah Cain" />
+        <div id="fb-cain" style="max-width: 500px;">
+            <img src="{{ site.url }}assets/img/artworks/Cain-2010.jpg" alt="Sarah Cain" />
             <div >
             <br />
             <span class="artcaption" style="font-size: 10pt; color: #808080">
@@ -78,6 +78,78 @@
             <strong>Kris Martin</strong><br>
             <em>Entscheidungszwanghorror</em>, 2014<br>
             bronze
+            </span></div>
+        </div>
+        <div id="fb-install-03" style="max-width: 800px;">
+            <img src="{{ site.url }}assets/img/artworks/surrogates-03.jpg" alt="Installation" />
+            <div >
+            <br />
+            <span class="artcaption" style="font-size: 10pt; color: #808080">
+
+            Installation shot. From left to right:<br /><br />
+            <strong>Artist</strong><br>
+            <em>Title</em>, year<br>
+            medium
+            </span></div>
+        </div>
+        <div id="fb-install-04" style="max-width: 500px;">
+            <img src="{{ site.url }}assets/img/artworks/surrogates-04.jpg" alt="Installation" />
+            <div >
+            <br />
+            <span class="artcaption" style="font-size: 10pt; color: #808080">
+
+            Installation shot. From left to right:<br /><br />
+            <strong>Artist</strong><br>
+            <em>Title</em>, year<br>
+            medium
+            </span></div>
+        </div>
+        <div id="fb-install-05" style="max-width: 800px;">
+            <img src="{{ site.url }}assets/img/artworks/surrogates-05.jpg" alt="Installation" />
+            <div >
+            <br />
+            <span class="artcaption" style="font-size: 10pt; color: #808080">
+
+            Installation shot. From left to right:<br /><br />
+            <strong>Artist</strong><br>
+            <em>Title</em>, year<br>
+            medium
+            </span></div>
+        </div>
+        <div id="fb-install-06" style="max-width: 800px;">
+            <img src="{{ site.url }}assets/img/artworks/surrogates-06.jpg" alt="Installation" />
+            <div >
+            <br />
+            <span class="artcaption" style="font-size: 10pt; color: #808080">
+
+            Installation shot. From left to right:<br /><br />
+            <strong>Artist</strong><br>
+            <em>Title</em>, year<br>
+            medium
+            </span></div>
+        </div>
+        <div id="fb-install-07" style="max-width: 800px;">
+            <img src="{{ site.url }}assets/img/artworks/surrogates-07.jpg" alt="Installation" />
+            <div >
+            <br />
+            <span class="artcaption" style="font-size: 10pt; color: #808080">
+
+            Installation shot. From left to right:<br /><br />
+            <strong>Artist</strong><br>
+            <em>Title</em>, year<br>
+            medium
+            </span></div>
+        </div>
+        <div id="fb-install-08" style="max-width: 800px;">
+            <img src="{{ site.url }}assets/img/artworks/surrogates-08.jpg" alt="Installation" />
+            <div >
+            <br />
+            <span class="artcaption" style="font-size: 10pt; color: #808080">
+
+            Installation shot. From left to right:<br /><br />
+            <strong>Artist</strong><br>
+            <em>Title</em>, year<br>
+            medium
             </span></div>
         </div>
     </div>
