--- a/_includes/slider-Surrogates.html
+++ b/_includes/slider-Surrogates.html
@@ -19,12 +19,18 @@
             <img data-lazy="{{ site.url }}assets/img/artworks/surrogates-07-sqr.jpg" alt="Installation Shot"/></a></div> 
         <div><a  href="#fb-install-08" class="fb-gallery">
             <img data-lazy="{{ site.url }}assets/img/artworks/surrogates-08-sqr.jpg" alt="Installation Shot"/></a></div> 
-       <!-- <div><img data-lazy="{{ site.url }}assets/img/artworks/MacLeod-sqr.jpg" alt="Myfanwy MacLeod"/></a></div>
-        <div><a href="#"><img data-lazy="{{ site.url }}assets/img/artworks/beasley-sqr.jpg" alt="Kevin Beasley"/></a></div>
-        <div><a href="#"><img data-lazy="{{ site.url }}assets/img/artworks/beshty-sqr.jpg" alt="Walead Beshty"/></a></div>
-        <div><a href="#"><img data-lazy="{{ site.url }}assets/img/artworks/martin-sqr.jpg" alt="Kris Martin"/></a></div>
-        <div><a href="#"><img data-lazy="{{ site.url }}assets/img/artworks/pascual-sqr.jpg" alt="Marlo Pascual"/></a></div>
-        -->
+       
+        <div><a  href="#fb-macleod" class="fb-gallery">
+            <img data-lazy="{{ site.url }}assets/img/artworks/MacLeod-sqr.jpg" alt="Myfanwy MacLeod"/></a></div>
+        <div><a  href="#fb-beasley" class="fb-gallery">
+            <img data-lazy="{{ site.url }}assets/img/artworks/beasley-sqr.jpg" alt="Kevin Beasley"/></a></div>
+        <div><a  href="#fb-beshty" class="fb-gallery">
+            <img data-lazy="{{ site.url }}assets/img/artworks/beshty-sqr.jpg" alt="Walead Beshty"/></a></div>
+        <div><a  href="#fb-martin" class="fb-gallery">
+            <img data-lazy="{{ site.url }}assets/img/artworks/martin-sqr.jpg" alt="Kris Martin"/></a></div>
+        <div><a  href="#fb-pascual" class="fb-gallery">
+            <img data-lazy="{{ site.url }}assets/img/artworks/pascual-sqr.jpg" alt="Marlo Pascual"/></a></div>
+        
 
         
 
@@ -40,8 +46,8 @@
 
             <strong>Sarah Cain</strong><br>
             <em>Self-portrait</em>, 2010<br>
-            acrylic and gouache on sheet music
-            
+            acrylic and gouache on sheet music<br>
+            23 3/8 x 18 3/8 in.
             </span></div>
                 
         </div>
@@ -53,11 +59,13 @@
             Installation shot. From left to right:<br /><br />
             <strong>Mariah Robertson</strong><br>
             <em>59</em>, 2011<br>
-            unique chemical treatment on RA-4 paper<br> <br />
+            unique chemical treatment on RA-4 paper<br>
+            86 x 53 in. <br> <br />
             
             <strong>Kevin Beasley</strong><br>
             <em>Untitled</em>, 2014<br>
-            polyurethane foam, t-shirts, resin
+            polyurethane foam, t-shirts, resin<br>
+            [15 x 11.5 x 6 in.] x 2
             </span></div>
         </div>
         <div id="fb-install-02" style="max-width: 800px;">
@@ -69,15 +77,19 @@
             Installation shot. From left to right:<br /><br />
             <strong>Annette Kelm</strong><br>
             <em>Anonymous, Lilac Clock Bag Buffalo Exchange</em>, 2007<br>
-            c-prints on Alu-dibond<br> <br />
+            c-prints on Alu-dibond<br>
+            [19 x 23 in.] x 4<br> <br />
             
             <strong>Stephen Waddell</strong><br>
             <em>Pile</em>, 2006<br>
-            inkjet print<br> <br />
+            inkjet print<br>
+            48 x 56 in.
+            <br> <br />
             
             <strong>Kris Martin</strong><br>
             <em>Entscheidungszwanghorror</em>, 2014<br>
-            bronze
+            bronze<br>
+            11 7/16 x 5 15/16 x 7 7/8 in.
             </span></div>
         </div>
         <div id="fb-install-03" style="max-width: 800px;">
@@ -87,9 +99,22 @@
             <span class="artcaption" style="font-size: 10pt; color: #808080">
 
             Installation shot. From left to right:<br /><br />
-            <strong>Artist</strong><br>
-            <em>Title</em>, year<br>
-            medium
+            <strong>Marlo Pascual</strong><br>
+            <em>Untitled</em>, 2009<br>
+            digital c-print, potted plant<br>
+            38 x 53 x 36 in.<br><br>
+
+            <strong>Owen Kydd</strong><br>
+            <em>Heavy Water</em>, 2015<br>
+            video on square digital display with media player<br>
+            16 1/4 x 16 1/4 x 7 in.<br><br>
+
+            <strong>Walead Beshty</strong><br>
+            <em>Four Magnet, Three Color Curl (CMY: Irvine, California, September 13th 2009, <br>
+            Fuji Crystal Archive Type C) / Abstract (Four Magnet, Three Color Curl (CMY: Irvine, <br>
+            California, September 13th 2009, Fuji Crystal Archive Type C)</em>, 2012<br>
+            colour photographic paper<br>
+            50 x 107 in. and 30 x 40 in.
             </span></div>
         </div>
         <div id="fb-install-04" style="max-width: 500px;">
@@ -99,9 +124,20 @@
             <span class="artcaption" style="font-size: 10pt; color: #808080">
 
             Installation shot. From left to right:<br /><br />
-            <strong>Artist</strong><br>
-            <em>Title</em>, year<br>
-            medium
+
+            <strong>Kim Kennedy Austin</strong><br>
+            <em>Audel’s Answers on Blue Print Reading</em>, 2006<br>
+            embroidery floss and masking tape on cross-stitched fabric<br>
+            20 x 15 in<br><br>
+
+            <strong>Tim Lee</strong><br>
+            <em>Alexander Rodchenko, Spacial Construction No. 11, Square in Square, 1918</em>, 2013<br>
+            wood<br><br>
+
+            <strong>Geoffrey Farmer</strong><br>
+            <em>Sagger-Safers, Saddled, Stoned and Sanguine</em>, 2013<br>
+            paper cutouts, wood, glass paint bottle<br>
+            15 x 9 x 6 in.
             </span></div>
         </div>
         <div id="fb-install-05" style="max-width: 800px;">
@@ -111,9 +147,28 @@
             <span class="artcaption" style="font-size: 10pt; color: #808080">
 
             Installation shot. From left to right:<br /><br />
-            <strong>Artist</strong><br>
-            <em>Title</em>, year<br>
-            medium
+
+            <strong>Walead Beshty</strong><br>
+            <em>Four Magnet, Three Color Curl (CMY: Irvine, California, September 13th 2009, <br>
+            Fuji Crystal Archive Type C) / Abstract (Four Magnet, Three Color Curl (CMY: Irvine, <br>
+            California, September 13th 2009, Fuji Crystal Archive Type C)</em>, 2012<br>
+            colour photographic paper<br>
+            50 x 107 in. and 30 x 40 in.<br><br>
+
+             <strong>Myfanwy MacLeod</strong><br>
+            <em>Exorcist series</em>, 2009<br>
+            cut film posters<br>
+            [33 x 33 inches] x 3<br><br>
+
+            <strong>Kim Kennedy Austin</strong><br>
+            <em>Clear Eyes, Full Hearts, Can’t Lose</em>, 2014<br>
+            watercolour on paper<br>
+            14 1/2 x 17 3/4 in.<br><br>
+
+            <strong>Kris Martin</strong><br>
+            <em>Entscheidungszwanghorror</em>, 2014<br>
+            bronze
+            11 7/16 x 5 15/16 x 7 7/8 in.
             </span></div>
         </div>
         <div id="fb-install-06" style="max-width: 800px;">
@@ -122,10 +177,16 @@
             <br />
             <span class="artcaption" style="font-size: 10pt; color: #808080">
 
+
             Installation shot. From left to right:<br /><br />
-            <strong>Artist</strong><br>
-            <em>Title</em>, year<br>
-            medium
+            <strong>Lyman A. William</strong><br>
+            <em>The Road through the Forest</em>, 2008<br>
+            mixed media<br><br>
+
+            <strong>Rodney Graham</strong><br>
+            <em>Pipecleaner Artist</em>, 2013<br>
+            painted aluminum lightbox, transmounted chromogenic transparency<br>
+            [90 5/8 x 146 1/4 x 7 in.] x 2
             </span></div>
         </div>
         <div id="fb-install-07" style="max-width: 800px;">
@@ -135,9 +196,15 @@
             <span class="artcaption" style="font-size: 10pt; color: #808080">
 
             Installation shot. From left to right:<br /><br />
-            <strong>Artist</strong><br>
-            <em>Title</em>, year<br>
-            medium
+            <strong>Kim Kennedy Austin</strong><br>
+            <em>Clear Eyes, Full Hearts, Can’t Lose</em>, 2014<br>
+            watercolour on paper<br>
+            14 1/2 x 17 3/4 in.<br><br>
+
+            <strong>Kris Martin</strong><br>
+            <em>Entscheidungszwanghorror</em>, 2014<br>
+            bronze<br>
+            11 7/16 x 5 15/16 x 7 7/8 in.
             </span></div>
         </div>
         <div id="fb-install-08" style="max-width: 800px;">
@@ -146,10 +213,73 @@
             <br />
             <span class="artcaption" style="font-size: 10pt; color: #808080">
 
-            Installation shot. From left to right:<br /><br />
-            <strong>Artist</strong><br>
-            <em>Title</em>, year<br>
-            medium
+            <strong>Simon Starling</strong><br>
+            <em>Inventar –Nr. 8573 (Man Ray), 4M – 400 NM</em>, 2006<br>
+            80 6 x 7 cm. black and white transparencies, 2 Gotschmann slide projectors, <br>
+            Kodak PDC dissolve control unit, CD and player, projector table
+            </span></div>
+        </div>
+        <div id="fb-macleod" style="max-width: 800px;">
+            <img src="{{ site.url }}assets/img/artworks/MacLeod-2009.jpg" alt="Installation" />
+            <div >
+            <br />
+            <span class="artcaption" style="font-size: 10pt; color: #808080">
+
+            <strong>Myfanwy MacLeod</strong><br>
+            <em>Exorcist series</em>, 2009<br>
+            cut film posters<br>
+            [33 x 33 inches] x 3
+            </span></div>
+        </div>
+        <div id="fb-beshty" style="max-width: 800px;">
+            <img src="{{ site.url }}assets/img/artworks/Beshty-2012-520.jpg" alt="Installation" />
+            <div >
+            <br />
+            <span class="artcaption" style="font-size: 10pt; color: #808080">
+
+            <strong>Walead Beshty</strong><br>
+            <em>Four Magnet, Three Color Curl (CMY: Irvine, California, <br>
+            September 13th 2009, Fuji Crystal Archive Type C) / Abstract <br>
+            (Four Magnet, Three Color Curl (CMY: Irvine, California, <br>
+            September 13th 2009, Fuji Crystal Archive Type C)</em>, 2012<br>
+            colour photographic paper<br>
+            50 x 107 in. and 30 x 40 in.
+            </span></div>
+        </div>
+        <div id="fb-beasley" style="max-width: 800px;">
+            <img src="{{ site.url }}assets/img/artworks/Beasley-2014.jpg" alt="Installation" />
+            <div >
+            <br />
+            <span class="artcaption" style="font-size: 10pt; color: #808080">
+
+           <strong>Kevin Beasley</strong><br>
+            <em>Untitled</em>, 2014<br>
+            polyurethane foam, t-shirts, resin<br>
+            [15 x 11.5 x 6 in.] x 2
+            </span></div>
+        </div>
+        <div id="fb-martin" style="max-width: 800px;">
+            <img src="{{ site.url }}assets/img/artworks/Martin-391x520.jpg" alt="Installation" />
+            <div >
+            <br />
+            <span class="artcaption" style="font-size: 10pt; color: #808080">
+
+            <strong>Kris Martin</strong><br>
+            <em>Entscheidungszwanghorror</em>, 2014<br>
+            bronze<br>
+            11 7/16 x 5 15/16 x 7 7/8 in.
+            </span></div>
+        </div>
+        <div id="fb-pascual" style="max-width: 800px;">
+            <img src="{{ site.url }}assets/img/artworks/Pascual-624x520.jpg" alt="Installation" />
+            <div >
+            <br />
+            <span class="artcaption" style="font-size: 10pt; color: #808080">
+
+            <strong>Marlo Pascual</strong><br>
+            <em>Untitled</em>, 2009<br>
+            digital c-print, potted plant<br>
+            38 x 53 x 36 in.
             </span></div>
         </div>
     </div>
