--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,7 +8,7 @@
 
       {% include static-navbar.html %}
 
-      <div class="page-content">
+      <div class="page-content mainstyle">
         
           {{ content }}
         
