--- a/css/navbar.css
+++ b/css/navbar.css
@@ -1,3 +1,13 @@
+@font-face {
+    font-family: 'HelveticaNeue';
+    src: url('../assets/fonts/HelveticaNeue.eot');
+    src: url('../assets/fonts/HelveticaNeue.eot') format('embedded-opentype'),
+         url('../assets/fonts/HelveticaNeue.woff2') format('woff2'),
+         url('../assets/fonts/HelveticaNeue.woff') format('woff'),
+         url('../assets/fonts/HelveticaNeue.ttf') format('truetype'),
+         url('../assets/fonts/HelveticaNeue.svg#HelveticaNeue') format('svg');
+}
+
 body {
   padding-top: 20px;
   padding-bottom: 20px;
@@ -7,3 +17,32 @@ body {
   margin-bottom: 20px;
 }
 
+.mainstyle {
+	font-family: 'HelveticaNeue';
+	text-decoration: none;
+	color: #808080;
+}
+.mainstyle p {
+	font-size: 16px;
+	line-height: 1.6em;
+}
+.mainstyle h2 {
+	font-weight: 600;
+	font-size:24px;
+	color: #808080;
+}
+.mainstyle a {
+	color: #595959;
+}
+.mainstyle a:hover{
+	text-decoration: none;
+	color: #808080;
+}
+
+p.address {
+	font-size: 90%;
+}
+
+.navbar {
+	font-family: 'HelveticaNeue';
+}
