--- a/_includes/slider-woosh.html
+++ b/_includes/slider-woosh.html
@@ -1,35 +1,35 @@
 <section class="slick-wrapper">
     <ul class="slick-01">
     
-        <div><a  href="#fb-cain" class="fb-gallery">
-            <img data-lazy="{{ site.url }}assets/img/artworks/surrogates/cain-sqr.jpg" alt="Sarah Cain"/></a></div>
-        <div><a  href="#fb-install-01" class="fb-gallery">
-            <img data-lazy="{{ site.url }}assets/img/artworks/surrogates/surrogates-01-sqr.jpg" alt="Installation Shot"/></a></div>
-        <div><a  href="#fb-install-02" class="fb-gallery">
-            <img data-lazy="{{ site.url }}assets/img/artworks/surrogates/surrogates-02-sqr.jpg" alt="Installation Shot"/></a></div>
-        <div><a  href="#fb-install-03" class="fb-gallery">
-            <img data-lazy="{{ site.url }}assets/img/artworks/surrogates/surrogates-03-sqr.jpg" alt="Installation Shot"/></a></div>
+        <div><a  href="#fb-douglas" class="fb-gallery">
+            <img data-lazy="{{ site.url }}assets/img/artworks/woosh/douglas-sqr.jpg" alt="Stan Douglas" width="180px"/></a></div>
+        <div><a  href="#fb-horowitz" class="fb-gallery">
+            <img data-lazy="{{ site.url }}assets/img/artworks/woosh/horowitz-sqr.jpg" alt="Jonathan Horowitz" width="180px"/></a></div>
+        <div><a  href="#fb-jaar" class="fb-gallery">
+            <img data-lazy="{{ site.url }}assets/img/artworks/woosh/jaar-sqr.jpg" alt="Alfredo Jaar" width="180px"/></a></div>
+        <div><a  href="#fb-shearer" class="fb-gallery">
+            <img data-lazy="{{ site.url }}assets/img/artworks/woosh/shearer-sqr.jpg" alt="Stephen Shearer" width="180px"/></a></div> <!--
         <div><a  href="#fb-install-04" class="fb-gallery">
-            <img data-lazy="{{ site.url }}assets/img/artworks/surrogates/surrogates-04-sqr.jpg" alt="Installation Shot"/></a></div>
+            <img data-lazy="{{ site.url }}assets/img/artworks/woosh/surrogates-04-sqr.jpg" alt="Installation Shot"/></a></div>
         <div><a  href="#fb-install-05" class="fb-gallery">
-            <img data-lazy="{{ site.url }}assets/img/artworks/surrogates/surrogates-05-sqr.jpg" alt="Installation Shot"/></a></div>
+            <img data-lazy="{{ site.url }}assets/img/artworks/woosh/surrogates-05-sqr.jpg" alt="Installation Shot"/></a></div>
         <div><a  href="#fb-install-06" class="fb-gallery">
-            <img data-lazy="{{ site.url }}assets/img/artworks/surrogates/surrogates-06-sqr.jpg" alt="Installation Shot"/></a></div>
+            <img data-lazy="{{ site.url }}assets/img/artworks/woosh/surrogates-06-sqr.jpg" alt="Installation Shot"/></a></div>
         <div><a  href="#fb-install-07" class="fb-gallery">
-            <img data-lazy="{{ site.url }}assets/img/artworks/surrogates/surrogates-07-sqr.jpg" alt="Installation Shot"/></a></div> 
+            <img data-lazy="{{ site.url }}assets/img/artworks/woosh/surrogates-07-sqr.jpg" alt="Installation Shot"/></a></div> 
         <div><a  href="#fb-install-08" class="fb-gallery">
-            <img data-lazy="{{ site.url }}assets/img/artworks/surrogates/surrogates-08-sqr.jpg" alt="Installation Shot"/></a></div> 
+            <img data-lazy="{{ site.url }}assets/img/artworks/woosh/surrogates-08-sqr.jpg" alt="Installation Shot"/></a></div> 
        
         <div><a  href="#fb-macleod" class="fb-gallery">
-            <img data-lazy="{{ site.url }}assets/img/artworks/surrogates/MacLeod-sqr.jpg" alt="Myfanwy MacLeod"/></a></div>
+            <img data-lazy="{{ site.url }}assets/img/artworks/MacLeod-sqr.jpg" alt="Myfanwy MacLeod"/></a></div>
         <div><a  href="#fb-beasley" class="fb-gallery">
-            <img data-lazy="{{ site.url }}assets/img/artworks/surrogates/beasley-sqr.jpg" alt="Kevin Beasley"/></a></div>
+            <img data-lazy="{{ site.url }}assets/img/artworks/beasley-sqr.jpg" alt="Kevin Beasley"/></a></div>
         <div><a  href="#fb-beshty" class="fb-gallery">
-            <img data-lazy="{{ site.url }}assets/img/artworks/surrogates/beshty-sqr.jpg" alt="Walead Beshty"/></a></div>
+            <img data-lazy="{{ site.url }}assets/img/artworks/beshty-sqr.jpg" alt="Walead Beshty"/></a></div>
         <div><a  href="#fb-martin" class="fb-gallery">
-            <img data-lazy="{{ site.url }}assets/img/artworks/surrogates/martin-sqr.jpg" alt="Kris Martin"/></a></div>
+            <img data-lazy="{{ site.url }}assets/img/artworks/martin-sqr.jpg" alt="Kris Martin"/></a></div>
         <div><a  href="#fb-pascual" class="fb-gallery">
-            <img data-lazy="{{ site.url }}assets/img/artworks/surrogates/pascual-sqr.jpg" alt="Marlo Pascual"/></a></div>
+            <img data-lazy="{{ site.url }}assets/img/artworks/pascual-sqr.jpg" alt="Marlo Pascual"/></a></div>-->
         
 
         
@@ -38,87 +38,55 @@
     </ul>
 
     <div style="display: none;">
-        <div id="fb-cain" style="max-width: 500px;">
-            <img src="{{ site.url }}assets/img/artworks/surrogates/Cain-2010.jpg" alt="Sarah Cain" />
+        <div id="fb-douglas" style="max-width: 1000px;">
+            <img src="{{ site.url }}assets/img/artworks/woosh/Douglas.jpg" alt="Sarah Cain" />
             <div >
             <br />
             <span class="artcaption" style="font-size: 10pt; color: #808080">
 
-            <strong>Sarah Cain</strong><br>
-            <em>Self-portrait</em>, 2010<br>
-            acrylic and gouache on sheet music<br>
-            23 3/8 x 18 3/8 in.
+            <strong>Stan Douglas</strong><br>
+            <em>Ballantyne Pier, 18 June 1935</em>, 2008<br>
+            digital C-print mounted on dibond
             </span></div>
                 
         </div>
-        <div id="fb-install-01" style="max-width: 800px;">
-            <img src="{{ site.url }}assets/img/artworks/surrogates/surrogates-01.jpg" alt="Installation" />
+        <div id="fb-horowitz" style="max-width: 800px;">
+            <img src="{{ site.url }}assets/img/artworks/woosh/Horowitz.jpg" alt="Installation" />
             <div >
             <br />
             <span class="artcaption" style="font-size: 10pt; color: #808080">
-            Installation shot. From left to right:<br /><br />
-            <strong>Mariah Robertson</strong><br>
-            <em>59</em>, 2011<br>
-            unique chemical treatment on RA-4 paper<br>
-            86 x 53 in. <br> <br />
             
-            <strong>Kevin Beasley</strong><br>
-            <em>Untitled</em>, 2014<br>
-            polyurethane foam, t-shirts, resin<br>
-            [15 x 11.5 x 6 in.] x 2
+            <strong>Jonathan Horowitz</strong><br>
+            <em>Official Portrait of George W Bush Available for Free From <br>
+            the White House Hung Upside Down</em>, 2001<br>
+            framed c-print
             </span></div>
         </div>
-        <div id="fb-install-02" style="max-width: 800px;">
-            <img src="{{ site.url }}assets/img/artworks/surrogates/surrogates-02.jpg" alt="Installation" />
+        <div id="fb-jaar" style="max-width: 800px;">
+            <img src="{{ site.url }}assets/img/artworks/woosh/jaar.jpg" alt="Installation" />
             <div >
             <br />
             <span class="artcaption" style="font-size: 10pt; color: #808080">
 
-            Installation shot. From left to right:<br /><br />
-            <strong>Annette Kelm</strong><br>
-            <em>Anonymous, Lilac Clock Bag Buffalo Exchange</em>, 2007<br>
-            c-prints on Alu-dibond<br>
-            [19 x 23 in.] x 4<br> <br />
             
-            <strong>Stephen Waddell</strong><br>
-            <em>Pile</em>, 2006<br>
-            inkjet print<br>
-            48 x 56 in.
-            <br> <br />
-            
-            <strong>Kris Martin</strong><br>
-            <em>Entscheidungszwanghorror</em>, 2014<br>
-            bronze<br>
-            11 7/16 x 5 15/16 x 7 7/8 in.
+            <strong>Alfredo Jaar</strong><br>
+            <em>Three Women</em>, 2010<br>
+            18 spotlights, 3 photographs
             </span></div>
         </div>
-        <div id="fb-install-03" style="max-width: 800px;">
-            <img src="{{ site.url }}assets/img/artworks/surrogates/surrogates-03.jpg" alt="Installation" />
+        <div id="fb-shearer" style="max-width: 800px;">
+            <img src="{{ site.url }}assets/img/artworks/woosh/shearer-install.jpg" alt="Installation" />
             <div >
             <br />
             <span class="artcaption" style="font-size: 10pt; color: #808080">
 
-            Installation shot. From left to right:<br /><br />
-            <strong>Marlo Pascual</strong><br>
-            <em>Untitled</em>, 2009<br>
-            digital c-print, potted plant<br>
-            38 x 53 x 36 in.<br><br>
-
-            <strong>Owen Kydd</strong><br>
-            <em>Heavy Water</em>, 2015<br>
-            video on square digital display with media player<br>
-            16 1/4 x 16 1/4 x 7 in.<br><br>
-
-            <strong>Walead Beshty</strong><br>
-            <em>Four Magnet, Three Color Curl (CMY: Irvine, California, September 13th 2009, <br>
-            Fuji Crystal Archive Type C) / Abstract (Four Magnet, Three Color Curl (CMY: Irvine, <br>
-            California, September 13th 2009, Fuji Crystal Archive Type C)</em>, 2012<br>
-            colour photographic paper<br>
-            50 x 107 in. and 30 x 40 in.
+            <strong>Steven Shearer</strong><br>
+            <em>Diabolical Conquest</em>, 1997<br>
+            silkscreen on canvas
             </span></div>
         </div>
         <div id="fb-install-04" style="max-width: 500px;">
-            <img src="{{ site.url }}assets/img/artworks/surrogates/surrogates-04.jpg" alt="Installation" />
+            <img src="{{ site.url }}assets/img/artworks/surrogates-04.jpg" alt="Installation" />
             <div >
             <br />
             <span class="artcaption" style="font-size: 10pt; color: #808080">
@@ -141,7 +109,7 @@
             </span></div>
         </div>
         <div id="fb-install-05" style="max-width: 800px;">
-            <img src="{{ site.url }}assets/img/artworks/surrogates/surrogates-05.jpg" alt="Installation" />
+            <img src="{{ site.url }}assets/img/artworks/surrogates-05.jpg" alt="Installation" />
             <div >
             <br />
             <span class="artcaption" style="font-size: 10pt; color: #808080">
@@ -172,7 +140,7 @@
             </span></div>
         </div>
         <div id="fb-install-06" style="max-width: 800px;">
-            <img src="{{ site.url }}assets/img/artworks/surrogates/surrogates-06.jpg" alt="Installation" />
+            <img src="{{ site.url }}assets/img/artworks/surrogates-06.jpg" alt="Installation" />
             <div >
             <br />
             <span class="artcaption" style="font-size: 10pt; color: #808080">
@@ -190,7 +158,7 @@
             </span></div>
         </div>
         <div id="fb-install-07" style="max-width: 800px;">
-            <img src="{{ site.url }}assets/img/artworks/surrogates/surrogates-07.jpg" alt="Installation" />
+            <img src="{{ site.url }}assets/img/artworks/surrogates-07.jpg" alt="Installation" />
             <div >
             <br />
             <span class="artcaption" style="font-size: 10pt; color: #808080">
@@ -208,7 +176,7 @@
             </span></div>
         </div>
         <div id="fb-install-08" style="max-width: 800px;">
-            <img src="{{ site.url }}assets/img/artworks/surrogates/surrogates-08.jpg" alt="Installation" />
+            <img src="{{ site.url }}assets/img/artworks/surrogates-08.jpg" alt="Installation" />
             <div >
             <br />
             <span class="artcaption" style="font-size: 10pt; color: #808080">
@@ -220,7 +188,7 @@
             </span></div>
         </div>
         <div id="fb-macleod" style="max-width: 800px;">
-            <img src="{{ site.url }}assets/img/artworks/surrogates/MacLeod-2009.jpg" alt="Installation" />
+            <img src="{{ site.url }}assets/img/artworks/MacLeod-2009.jpg" alt="Installation" />
             <div >
             <br />
             <span class="artcaption" style="font-size: 10pt; color: #808080">
@@ -232,7 +200,7 @@
             </span></div>
         </div>
         <div id="fb-beshty" style="max-width: 800px;">
-            <img src="{{ site.url }}assets/img/artworks/surrogates/Beshty-2012-520.jpg" alt="Installation" />
+            <img src="{{ site.url }}assets/img/artworks/Beshty-2012-520.jpg" alt="Installation" />
             <div >
             <br />
             <span class="artcaption" style="font-size: 10pt; color: #808080">
@@ -247,7 +215,7 @@
             </span></div>
         </div>
         <div id="fb-beasley" style="max-width: 800px;">
-            <img src="{{ site.url }}assets/img/artworks/surrogates/Beasley-2014.jpg" alt="Installation" />
+            <img src="{{ site.url }}assets/img/artworks/Beasley-2014.jpg" alt="Installation" />
             <div >
             <br />
             <span class="artcaption" style="font-size: 10pt; color: #808080">
@@ -259,7 +227,7 @@
             </span></div>
         </div>
         <div id="fb-martin" style="max-width: 800px;">
-            <img src="{{ site.url }}assets/img/artworks/surrogates/Martin-391x520.jpg" alt="Installation" />
+            <img src="{{ site.url }}assets/img/artworks/Martin-391x520.jpg" alt="Installation" />
             <div >
             <br />
             <span class="artcaption" style="font-size: 10pt; color: #808080">
@@ -271,7 +239,7 @@
             </span></div>
         </div>
         <div id="fb-pascual" style="max-width: 800px;">
-            <img src="{{ site.url }}assets/img/artworks/surrogates/Pascual-624x520.jpg" alt="Installation" />
+            <img src="{{ site.url }}assets/img/artworks/Pascual-624x520.jpg" alt="Installation" />
             <div >
             <br />
             <span class="artcaption" style="font-size: 10pt; color: #808080">
